# Quantum-Trend

./: .env.development  .env.example  .gitignore  .prettierignore  Dockerfile.api  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.ts
.githooks/: pre-commit
.streamlit/: config.toml
config/: backtest.yaml  backtest_breakout_down_v1.yaml  backtest_breakout_high20_v1.yaml  backtest_daily_macro.yaml  backtest_daily_macro_1d.yaml  backtest_mm200_v2.yaml  backtest_mm200_v2_1d.yaml  backtest_portfolio.yaml  backtest_pullback_ema20_v1.yaml  backtest_pullback_short_v1.yaml  backtest_quantum_breakout.yaml  backtest_quantum_pullback.yaml  backtest_quantum_supertrend.yaml  backtest_quantum_trend_pro.yaml  backtest_supertrend_bear_v1.yaml  backtest_supertrend_mm200_v1.yaml  backtest_v2.yaml  backtest_v2_1.yaml  backtest_v2_2.yaml  backtest_v3.yaml  live.yaml  paper.yaml
docs/: OPERACIONAL.md  QUALIDADE.md  TECNICA.md  promotion_gates.md  strategy_v1.md
scripts/: analyze_monthly.py  analyze_monthly_summary.py  bench_bh.py  check_batch_errors.py  check_binance_demo.py  install-git-hooks.ps1  restart-api.cmd  restart-api.ps1  restore_atlas.py  start-api.ps1  start-ui.cmd  start-ui.ps1  start.ps1
src/: routeTree.gen.ts  router.tsx  server.ts  styles.css
tests/: conftest.py  test_alerts.py  test_analytics_results.py  test_api.py  test_backtest_batch.py  test_backtest_chart.py  test_backtest_jobs.py  test_backtester.py  test_bear_strategies.py  test_bot_pool.py  test_brokers_multi_exchange.py  test_compare_report.py  test_dashboard_actions.py  test_dashboard_ops.py  test_dashboard_performance.py  test_engine_credentials.py  test_indicators.py  test_intelligence.py  test_intelligence_selection.py  test_level2.py  test_level3.py  test_live_bot.py  test_live_gates.py  test_market_regime.py  test_mm200_trend.py  test_monitoring_incidents.py  test_new_strategies.py  test_ohlcv_history.py  test_operational_config.py  test_risk.py  (+15 more)
(+223 files in other folders)
